--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6655,4 +6655,22 @@ footer.style-2 .footer-top.dark-view * {
   }
 }
 
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+
+.my-float{
+	margin-top:16px;
+}
 /*# sourceMappingURL=style.css.map */
